--- a/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_fr.xml
+++ b/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_fr.xml
@@ -320,7 +320,7 @@ Version    Arch       Nom Profil
 Vous pouvez régler les problèmes décrits dans cet avis de deux façons :
 
  - sélectionner le nom de votre serveur en cliquant sur son nom dans la liste
- disponible à l'emplacement suivant, puis planifier
+ disponible à l'emplacement suivant, puis programmer
  une mise à jour des errata de cette liste :
  {1}
 
@@ -542,6 +542,98 @@ représentant commercial Red Hat régional pour obtenir des informations sur la 
 Merci d'utiliser @@PRODUCT_NAME@@.
 --L'Équipe @@PRODUCT_NAME@@
 </target>
+      </trans-unit>
+      <trans-unit id="email.forgotten.password">
+        <source>
+[ This is an automated email sent to {0} at your request. ]
+
+Your @@PRODUCT_NAME@@ password has been reset.  To sign in, go to:
+
+https://{1}/
+
+And use the following username and password:
+
+Username: {2}
+Password: {3}
+
+Once you have logged in, you may then change your password.
+
+If you continue to have difficulties logging in, please contact
+your @@PRODUCT_NAME@@ administrator for further assistance.
+
+Thank you for using @@PRODUCT_NAME@@.
+        </source>
+        <context-group name="ctx"><context context-type="sourcefile">ForgotCredentials</context><context context-type="paramnotes">
+            {0} - Email address
+            {1} - Hostname of the @@PRODUCT_NAME@@</context>
+            {2} - Username
+            {3} - Password
+        </context-group>
+        <target>
+[ Ceci est un e-mail automatique envoyé à {0} à votre demande. ]
+
+Votre mot de passe pour @@PRODUCT_NAME@@ a été réinitialisé. Pour vous connecter, veuillez vous rendre sur :
+
+https://{1}/
+
+Et utiliser le nom d'utilisateur et mot de passe suivant :
+
+Nom d'utilisateur : {2}
+Mot de passe : {3}
+
+Vous pourrez changer votre mot de passe une fois connecté.
+
+Si vous ne parvenez toujours pas à vous connecter, veuillez contacter
+votre administrateur @@PRODUCT_NAME@@ pour obtenir de l'aide.
+
+Merci de choisir @@PRODUCT_NAME@@.
+        </target>
+      </trans-unit>
+      <trans-unit id="email.forgotten.logins">
+        <source>
+[ This is an automated email sent to {0} at your request. ]
+
+You have requested a list of all @@PRODUCT_NAME@@ logins associated
+with the email address {0}.
+
+Existing login(s):
+
+{1}
+You may reset the passwords for any of the above @@PRODUCT_NAME@@ logins at:
+
+  https://{2}/rhn/help/ForgotCredentials.do
+
+If you continue to have difficulties logging in, please contact
+your @@PRODUCT_NAME@@ administrator for further assistance.
+If you did not request this email be sent, please disregard this message.
+
+Thank you for using @@PRODUCT_NAME@@.
+        </source>
+        <context-group name="ctx">
+          <context context-type="sourcefile">ForgotCredentials</context>
+          <context context-type="paramnotes">
+            {0} - Email address
+            {1} - Existing logins
+            {2} - Hostname of the @@PRODUCT_NAME@@</context>
+        </context-group>
+        <target>
+[ Ceci est un e-mail automatique envoyé à {0} à votre demande. ]
+
+Vous avez demandé une liste de toutes les informations d'identification de @@PRODUCT_NAME@@ associées à l'adresse e-mail {0}.
+
+Informations d'identification existantes :
+
+{1}
+Vous pouvez réinitialiser les mots de passe pour chacune de ces informations d'identification de @@PRODUCT_NAME@@ sur :
+
+  https://{2}/rhn/help/ForgotCredentials.do
+
+Si vous ne parvenez toujours pas à vous connecter, veuillez contacter
+votre administrateur @@PRODUCT_NAME@@ pour obtenir de l'aide.
+Si vous n'êtes pas l'auteur de cette demande, veuillez ignorer cet e-mail.
+
+Merci de choisir @@PRODUCT_NAME@@.
+        </target>
       </trans-unit>
     </body>
   </file>
