--- a/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_ko.xml
+++ b/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_ko.xml
@@ -230,8 +230,8 @@ Summary:
       </context>
           </context-group>
           <target>
-@@PRODUCT_NAME@@는 다음과 같은 권고가 등록한 하나
-이상의 시스템에 적용 가능하다고 판단했습니다:
+@@PRODUCT_NAME@@는 다음과 같은 권고가 등록한 하나 
+이상의 시스템에 적용 가능하다고 판단했습니다: 
 
 이 에라타에 대한 완전한 정보는 다음 위치에서 확인할 수 있습니다:
      {0}
@@ -260,8 +260,8 @@ package profile for that server is out of date. In that case you should run
 ---------------------
 영향을 받는 시스템 목록
 ---------------------
-이 에라타 권고는 아래에 나열된 시스템에 적용할 수 있습니다. 나열된 시스템에
-이 에라타를 적용되지 않으면 해당 서버의 패키지 프로파일이 오래된 것일 수 있습니다.
+이 에라타 권고는 아래에 나열된 시스템에 적용할 수 있습니다. 나열된 시스템에 
+이 에라타를 적용되지 않으면 해당 서버의 패키지 프로파일이 오래된 것일 수 있습니다. 
 이러한 경우 해당 시스템에 root로 'up2date -p' (RHEL 4 이하) 또는
 'rhn-profile-sync' (RHEL 5 이상)를 실행하고 소프트웨어 프로파일을 업데이트합니다.
     </target>
@@ -272,7 +272,7 @@ There is 1 affected system registered in 'Overview' (only systems for
 which you have explicitly enabled Errata Alerts are shown).
     </source>
           <target>
-'개요'에 등록된 하나의 시스템이 영향을 받음(에라타 통보가 명시적으로
+'개요'에 등록된 하나의 시스템이 영향을 받음(에라타 통보가 명시적으로 
 활성화된 시스템만 표시됩니다.)
     </target>
         </trans-unit>
@@ -287,7 +287,7 @@ which you have explicitly enabled Errata Alerts are shown).
       </context>
           </context-group>
           <target>
-'개요'에 등록된 {0} 시스템이 영향을 받음(에라타 통보가 명시적으로
+'개요'에 등록된 {0} 시스템이 영향을 받음(에라타 통보가 명시적으로 
 활성화된 시스템만 표시됩니다.)
     </target>
         </trans-unit>
@@ -319,7 +319,7 @@ You may address the issues outlined in this advisory in two ways:
 
 이 권고에서 설명된 문제는 다음의 두 가지 방법으로 해결할 수 있습니다:
 
-     - 다음 위치에서 사용할 수 있는 목록에서 서버 이름을 클릭하여 서버
+     - 다음 위치에서 사용할 수 있는 목록에서 서버 이름을 클릭하여 서버 
 이름을 선택하고 에라타 업데이트를 스케줄합니다:
            {1}
 
@@ -352,12 +352,12 @@ click the "Details" tab.
           <target>
 통지 설정 변경
 ---------------------------------
-에라타 통지 설정을 전역으로 활성화 또는 비활성화하려면 @@PRODUCT_NAME@@에
+에라타 통지 설정을 전역으로 활성화 또는 비활성화하려면 @@PRODUCT_NAME@@에 
 로그인하고 "개요"/"사용자 계정"에서 "설정" 탭으로 이동합니다.
 
         URL: {0}
 
-또한 "시스템 목록"에서 개별 시스템을 선택하여 시스템마다 통지를활성화하거나
+또한 "시스템 목록"에서 개별 시스템을 선택하여 시스템마다 통지를활성화하거나 
 비활성화할 수 있습니다. 개별 시스템 보기에서 "상세 정보" 탭을 클릭합니다.
 
 {1}
@@ -418,7 +418,7 @@ Thank you for using @@PRODUCT_NAME@@.
 이 이메일을 비활성화하기:
 ----------------------
 
-시스템에서 이 이메일을 비활성화하려면 다음의 설정 페이지로 이동합니다.
+시스템에서 이 이메일을 비활성화하려면 다음의 설정 페이지로 이동합니다. 
 https://{4}/rhn/account/UserPreferences.do
 
 
@@ -478,7 +478,7 @@ Thank you for using @@PRODUCT_NAME@@.
 
 
 @@PRODUCT_NAME@@을 사용해 주셔서 감사합니다.
---@@PRODUCT_NAME@@팀
+--@@PRODUCT_NAME@@팀 
 </target>
       </trans-unit>
       <trans-unit id="email.satellitecert.satbodyend">
@@ -531,6 +531,80 @@ until your certificate is renewed.</source>
 이 이메일은 @@PRODUCT_NAME@@ 인증서가 귀하의 {0} 서버에서 만료되었음을 알려드리기 위해
 전송되었습니다. 귀하의 인증서가 갱신될 때 까지 시스템 관리 서비스에
 액세스할 수 없습니다. </target>
+      </trans-unit>
+      <trans-unit id="email.forgotten.password">
+        <source>
+[ This is an automated email sent to {0} at your request. ]
+
+Your @@PRODUCT_NAME@@ password has been reset.  To sign in, go to:
+
+https://{1}/
+
+And use the following username and password:
+
+Username: {2}
+Password: {3}
+
+Once you have logged in, you may then change your password.
+
+If you continue to have difficulties logging in, please contact
+your @@PRODUCT_NAME@@ administrator for further assistance.
+
+Thank you for using @@PRODUCT_NAME@@.
+        </source>
+        <context-group name="ctx"><context context-type="sourcefile">ForgotCredentials</context><context context-type="paramnotes">
+            {0} - Email address
+            {1} - Hostname of the @@PRODUCT_NAME@@</context>
+            {2} - Username
+            {3} - Password
+        </context-group>
+        <target>
+[ 이는 귀하의 요청에 따라 {0}에 자동으로 전송되는 이메일입니다. ]
+
+귀하의 @@PRODUCT_NAME@@ 암호가 다시 설정되었습니다. 로그인하려면 다음으로 이동하십시오:
+
+https://{1}/
+
+다음의 사용자 이름과 암호를 사용하십시오:
+
+사용자 이름: {2}
+암호: {3}
+
+로그인한 후 암호를 변경할 수 있습니다.
+
+로그인에 문제가 있을 경우 @@PRODUCT_NAME@@ 관리자에게
+문의하십시오.
+
+@@PRODUCT_NAME@@을 사용해 주셔서 감사합니다.
+        </target>
+      </trans-unit>
+      <trans-unit id="email.forgotten.logins">
+        <source>
+[ This is an automated email sent to {0} at your request. ]
+
+You have requested a list of all @@PRODUCT_NAME@@ logins associated
+with the email address {0}.
+
+Existing login(s):
+
+{1}
+You may reset the passwords for any of the above @@PRODUCT_NAME@@ logins at:
+
+  https://{2}/rhn/help/ForgotCredentials.do
+
+If you continue to have difficulties logging in, please contact
+your @@PRODUCT_NAME@@ administrator for further assistance.
+If you did not request this email be sent, please disregard this message.
+
+Thank you for using @@PRODUCT_NAME@@.
+        </source>
+        <context-group name="ctx">
+          <context context-type="sourcefile">ForgotCredentials</context>
+          <context context-type="paramnotes">
+            {0} - Email address
+            {1} - Existing logins
+            {2} - Hostname of the @@PRODUCT_NAME@@</context>
+        </context-group>
       </trans-unit>
     </body>
   </file>
