--- a/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_pt_BR.xml
+++ b/java/code/src/com/redhat/rhn/frontend/strings/template/StringResource_pt_BR.xml
@@ -535,6 +535,99 @@ Este e-mail está sendo enviado para informá-lo de que seu Certificado do @@PRO
 venceu em seu satellite local {0}. Os serviços de gerenciamento de sistema estarão inacessíveis
 até que seu certificado seja renovado. </target>
       </trans-unit>
+      <trans-unit id="email.forgotten.password">
+        <source>
+[ This is an automated email sent to {0} at your request. ]
+
+Your @@PRODUCT_NAME@@ password has been reset.  To sign in, go to:
+
+https://{1}/
+
+And use the following username and password:
+
+Username: {2}
+Password: {3}
+
+Once you have logged in, you may then change your password.
+
+If you continue to have difficulties logging in, please contact
+your @@PRODUCT_NAME@@ administrator for further assistance.
+
+Thank you for using @@PRODUCT_NAME@@.
+        </source>
+        <context-group name="ctx"><context context-type="sourcefile">ForgotCredentials</context><context context-type="paramnotes">
+            {0} - Email address
+            {1} - Hostname of the @@PRODUCT_NAME@@</context>
+            {2} - Username
+            {3} - Password
+        </context-group>
+        <target>
+[ Este é um email automatizado enviado para {0} por sua requisição. ]
+
+Sua senha do @@PRODUCT_NAME@@ foi redefinida. Para entrar, vá para:
+
+https://{1}/
+
+E use o seguinte nome de usuário e senha:
+
+Username: {2}
+Password: {3}
+
+Depois que estiver autenticado, você poderá mudar sua senha.
+
+Caso continue a ter dificuldades em se autenticar, por favor entre em contato com
+seu administrador do @@PRODUCT_NAME@@ para obter assistência.
+
+Obrigado por usar  @@PRODUCT_NAME@@.
+        </target>
+      </trans-unit>
+      <trans-unit id="email.forgotten.logins">
+        <source>
+[ This is an automated email sent to {0} at your request. ]
+
+You have requested a list of all @@PRODUCT_NAME@@ logins associated
+with the email address {0}.
+
+Existing login(s):
+
+{1}
+You may reset the passwords for any of the above @@PRODUCT_NAME@@ logins at:
+
+  https://{2}/rhn/help/ForgotCredentials.do
+
+If you continue to have difficulties logging in, please contact
+your @@PRODUCT_NAME@@ administrator for further assistance.
+If you did not request this email be sent, please disregard this message.
+
+Thank you for using @@PRODUCT_NAME@@.
+        </source>
+        <context-group name="ctx">
+          <context context-type="sourcefile">ForgotCredentials</context>
+          <context context-type="paramnotes">
+            {0} - Email address
+            {1} - Existing logins
+            {2} - Hostname of the @@PRODUCT_NAME@@</context>
+        </context-group>
+        <target>
+[ Este é um email automatizado enviado para {0} por sua requisição. ]
+
+Você requisitou uma lista de todos os logins de @@PRODUCT_NAME@@ associados
+ao seu endereço de email {0}.
+
+Logins existentes:
+
+{1}
+Você poderá redefinir sua senha para qualquer um dos logins do @@PRODUCT_NAME@@ acima em:
+
+https://{2}/rhn/help/ForgotCredentials.do
+
+Caso continue a ter dificuldades em se autenticar, por favor entre em contato com
+seu administrador do @@PRODUCT_NAME@@ para obter assistência.
+Caso não tenha requisitado este email, por favor ignore esta mensagem.
+
+Obrigado por usar  @@PRODUCT_NAME@@.
+   </target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
